--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,16 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "plugins": [
       {
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./src/*"]
+     "paths": {
+      "@/*": [
+        "./*"
+      ]
     },
     "types": ["node"]
   },
