--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jwt-decode": "^4.0.0",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
+    "pnpm": "^10.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
