--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "next-auth": "^4.24.11",
     "pnpm": "^10.7.0",
     "react": "^19.0.0",
-    "react-colorful": "^5.6.1",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "react-toastify": "^11.0.5",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
