--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.23",
     "@types/react": "^19",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
