--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.2.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@material-tailwind/react": "^2.1.10",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
