--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.2.1",
