--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@material-tailwind/react": "^2.1.10",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.9.0",
-    "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1",
+    "@prisma/client": "^7.1.0",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "next": "15.2.1",
+    "next": "^16.0.8",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
@@ -38,24 +38,24 @@
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-toastify": "^11.0.5",
-    "zod": "^3.24.2",
+    "zod": "^4.1.13",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20.17.23",
+    "@types/node": "^25.0.0",
     "@types/react": "^19",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "^16.0.8",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.9.0",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4.0.11",
     "typescript": "^5"
   }
